--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express": "3.4.4",
     "jade": "*",
     "stylus": "*",
-    "debug": "^0.7.4"
+    "debug": "^0.7.4",
+    "msnodesql": "*"
   }
 }
